Fixed the Menu overflow issue. Added links to the respective controllers in the menu Worked on layout and CSS a little

--- a/Cubic ERP/Content/Site.css
+++ b/Cubic ERP/Content/Site.css
@@ -84,3 +84,19 @@ textarea {
     margin-top: 20px;
     margin-bottom: 10px;
 }
+
+#menu-holder {
+    border-right: 1px solid #cce2ff;
+    height: auto;
+    padding-left: 0px;
+    overflow: hidden;
+    font-size: 13px;
+}
+
+#search-box {
+    padding-left: 10px;
+}
+
+#table-crud {
+    font-size: 13px;
+}
